# NetworksLab2017

./: README.md
multithread/clientlinux/: CMakeLists.txt
multithread/winserver/: CMakeLists.txt  winserver.cpp
tcp_template/client_linux/: Makefile  main.c
tcp_template/client_win/: CMakeLists.txt  main.c
tcp_template/server_linux/: Makefile  main.c
tcp_template/server_win/: CMakeLists.txt  main.c
